style.css
.nav {
    margin-bottom: 0;
    border-radius: 0;
}

.navbar-nav a {
  font-size: 18px;
  color: #FFFCF6;
}

.navbar-nav i {
  color: #FFFCF6;
}

section {
  font-family: 'Montserrat', sans-serif;
}
.landing-section {
  background-image: url("./resources/bg-img.jpg");
  background-color: #474440;
  color: #FFFCF6;
  margin-bottom: 0;
  color: rgba(255, 252, 246, 0.653);
  padding-bottom: 0; 
}

.landing-container {
  background-color: #474440;
  animation-duration: 3s;
  animation-name: fadein;
  height: 100%;
  text-align: center;
  padding-bottom: 70px;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.portrait {
  border: 10px solid #1E1C19;
  animation-duration: 4s;
  animation-name: fadein;
  margin-top: 50px;
  margin-bottom: 50px;  
}
.about-section {
  background-color: #1E1C19;
  color: #FFFCF6;
  text-align: center;
  padding-top: 40px;
  padding-bottom: 70px;      
}

.about-section h1 {
  padding-bottom: 20px;
}

.about-section p {
  font-size: 18px;
  text-align: left;
}

.skills-section {
    background-color: #35333C;
    color: #FFFCF6;
    text-align: center;
    padding-top: 40px;
    padding-bottom: 50px;
}

.skill-box {
    padding: 35px;
    display: inline-block;
}

.skill-box div {
  /* background-color: #5E5A57; */
  display: 100%;  
  padding: 25px;
}

.skill-box img {
  transition: 5s;
  margin-top: 10px;
  border: 10px solid #1E1C19;
  width: 250px;
  height: 250px;
}

.skill-box img:hover {
  transition: 2s;
  opacity: 0;
}

.resume-section {
  text-align: center;
  background-color: #474440;
  color: #FFFCF6;
  padding-top: 50px;
  padding-bottom: 70px;
}
.resume-img {
  display: inline-block;
  transition: 1s;
  width: 450px;
}

.resume-img:hover {
  transition: 1s;
  opacity: 0.6;
  width: 520px;
}

.contact-section {
  color: #FFFCF6;
  background-color: #1E1C19;
  padding-top: 50px;
  padding-bottom: 70px;
}
.contact-section h1 {
  text-align: center;
}

footer {
  background-color: #35333C;
  color: #FFFCF6;
  text-align: right;
}

